--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
 
 body {
-    font-family: "Roboto", Helvetica, sans-serif;
+    font-family: "Amatic SC", Helvetica, sans-serif;
     margin: 0;
 }
 
@@ -11,7 +11,7 @@ body {
     justify-content: space-between;
     align-items: center;
     color: white;
-    background-color: rgba(93, 69, 43, 0.75);
+    background-color: rgba(93, 69, 43);
     padding: 0px 50px;
     box-shadow: 2px 2px 12px 6px rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(15px);
@@ -25,7 +25,11 @@ body {
 }
 
 .logo {
-    height: 50px;
+    height: 70px;
+}
+
+h1 {
+    font-size: 40px;
 }
 
 ul {
@@ -33,7 +37,7 @@ ul {
     padding: 0px;
     display: flex;
     gap: 25px;
-    font-size: 20px;
+    font-size: 30px;
 }
 
 a {
@@ -43,37 +47,47 @@ a {
 
 /* INFO */
 .info {
-    background-color: rgba(255, 255, 255, 0.45);
-    box-shadow: 2px 2px 12px 6px rgba(0, 0, 0, 0.2);
-    padding: 50px;
-    margin: 100px;
-    border-radius: 10px;
+    background-color: rgba(148, 120, 83);
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    gap: 100px;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 100px ;
 }
 
 .info-container {
+    height: 250px;
+    max-width: 800px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background-color: rgba(255, 255, 255, 0.75);
+    box-shadow: 2px 2px 12px 6px rgba(0, 0, 0, 0.2);
+    padding: 50px;
+    margin: 100px 0px;
+    margin-left: -35px;
+    margin-bottom: 300px;
+    border-radius: 10px;
+
 }
 
 .info-title {
     color: rgb(0, 0, 0);
-    font-size: 48px;
+    font-size: 60px;
     font-weight: 900;
     margin: 0;
 }
 
 .info-text {
-    font-size: 18px;
-    font-weight: 400;
+    font-size: 30px;
+    font-weight: 500;
 }
 
 .button-info {
-    background-color: #3882f6;
+    background-color: rgba(93, 69, 43);
+    font-family: "Amatic SC", Helvetica, sans-serif;
     color: white;
+    font-size: 22px;
     font-weight: 700;
     border: 0;
     width: 100px;
@@ -82,7 +96,7 @@ a {
 }
 
 .info-picture {
-    width: 500px;
+    height: 600px;
     border-radius: 10px;
     box-shadow: 2px 2px 12px 6px rgba(0, 0, 0, 0.2);
 }
@@ -112,12 +126,13 @@ a {
 }
 
 .mid-title {
-    font-size: 36px;
+    font-size: 50px;
     font-weight: bold;
 }
 
 .mid-text {
-    font-size: 18px;
+    font-size: 30px;
+    font-weight: 700;
 }
 
 .mid-picture {
@@ -137,11 +152,13 @@ a {
 
 .quote-text {
     text-align: left;
-    font-size: 24px;
+    font-size: 40px;
 }
 
 .quote-author {
     text-align: right;
+    font-size: 30px;
+    font-weight: 700;
 }
 
 /* BOTTON */
@@ -171,14 +188,20 @@ a {
 }
 
 .bottom-title {
-    font-size: 22px;
+    font-size: 50px;
     font-weight: 700;
     margin-top: 10px;
     margin-bottom: 0;
 }
 
+.bottom-text {
+    font-size: 30px;
+}
+
 .button-bottom {
-    background-color: #3882f6;
+    background-color: rgba(93, 69, 43);
+    font-family: "Amatic SC", Helvetica, sans-serif;
+    font-size: 22px;
     color: white;
     font-weight: 700;
     border: 1px solid white;
@@ -191,7 +214,8 @@ a {
 /* FOOTER */
 .footer {
     text-align: center;
+    font-size: 20px;
     color: white;
-    background-color: rgba(93, 69, 43, 0.75);
+    background-color: rgba(93, 69, 43);
     padding: 10px 0px;
 }
